# 2DGame

./: Game.sln  README.md
3Dtest/: 3Dtest.vcxproj  3Dtest.vcxproj.filters
3Dtest/assets/: arc.frag  quad.vert
3Dtest/src/: GLrenderer.h  GLrenderer.hpp  actionInterface.h  assets.h  attacks.hpp  fileUtils.h  game.h  game.hpp  input.h  input.hpp  main.cpp  renderInterface.h  utils.h
3Dtest/src/action/: action.h  action.hpp  attackActionStructs.h  attacks.hpp
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD/src/: glad.c
GameSource/: GameSource.vcxproj  imgui.ini
GameSource/assets/: arc.frag  arc.vert  mapShader.frag  mapShader.vert  quad.vert
GameSource/assets/mapFiles/: MAP_START.SMAP
GameSource/src/: Events.hpp  GLRenderer_attackRenderData.h  GLrenderer.h  GLrenderer.hpp  GLrenderer_attackQueue.hpp  animationInterFace.h  assets.h  camera.h  easing.hpp  fileUtils.h  game.h  game.hpp  input.h  input.hpp  itemInterface.h  main.cpp  mobs.h  player.h  renderInterface.h  targeting.h  targeting.hpp  utils.h
GameSource/src/GUI/: GUI.h  GUI.hpp
GameSource/src/action/: ACTION_ENUM.H  action.h  action.hpp  actionDrawData.h  actionDrawData.hpp  attackActionStructs.h  attackProperties.h  attackProperties.hpp  attackTimer.h  attackTimer.hpp  attacks.hpp
GameSource/src/equipment/: WeaponStats.h  equipmentSet.h  equipment_ENUM.h  weapon.h
GameSource/src/map/: map.hpp  mapEnum.h  mapFilePaths.h  mapMisc.h
cMake/GameCMake/: CMakeLists.txt
cMake/GameCMake/GameCMake/: CMakeLists.txt  GameCMake.cpp  GameCMake.h
